test/tests/stages/9_functions/valid/arguments_in_registers/param_shadows_local_var.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: f
                  List[1]: 
                    TIdentifier: a
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[1]: 
                      Int: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: f
                  List[1]: 
                    CVar: 
                      TIdentifier: a
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[1]: 
          TIdentifier: a
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CMultiply: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
